--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ header .navigation{
 }
 
 header .navigation a{
-  color: #fff;
+  color: #111;
   font-size:25px;
   font-weight: 500;
   text-decoration: none;
